# agac-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.woodpecker/: ruff.yaml
api/: agac.py  constants.py  errors.py  image.py  main.py
scripts/: docker_image.py
